--- a/assets/sass/modules/_content.scss
+++ b/assets/sass/modules/_content.scss
@@ -22,7 +22,8 @@
 	}
 }
 
-.entry-description {
+.entry-description,
+.entry-footer {
 	max-width: 100%;
 	margin: 0 auto;
 
@@ -113,6 +114,12 @@
 .posted-on-meta {
 	text-align: center;
 	margin-bottom: 1em;
+}
+
+.image-exif-list {
+	list-style: none;
+	padding: 0;
+	margin-left: 0;
 }
 
 // Asides
