Revised content sizing to class and not children, added extra margin-bottom to entry title at large size to match body margin

--- a/assets/sass/modules/_content.scss
+++ b/assets/sass/modules/_content.scss
@@ -19,6 +19,7 @@
 
 	@include susy-media($tablet-landscape) {
 		font-size: rem(36);
+		margin-bottom: 1em;
 	}
 }
 
@@ -55,9 +56,9 @@
 	display: inline;
 }
 
-.page-content > p,
-.entry-content > p,
-.entry-summary > p{
+.page-content,
+.entry-content,
+.entry-summary{
 	max-width: rem(640);
 	margin: 0 auto 1.5em auto;
 }
